[gd_scene load_steps=51 format=2]

[ext_resource path="res://Scenes/Main/bg.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Main/13.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Main/06_b.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Main/11.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Main/07_b.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Main/08.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Main/09.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Main/12.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Main/13_b.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Main/07.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Main/10.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Main/06.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Main/12_b.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Main/08_b.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Main/05_b.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Main/10_b.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Main/11_b.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Main/09_b.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Main/05.png" type="Texture" id=19]
[ext_resource path="res://Scenes/Main/01.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Main/Main.gd" type="Script" id=21]
[ext_resource path="res://Scenes/Main/03_.png" type="Texture" id=22]
[ext_resource path="res://Scenes/Main/06-charac te r-select.mp3" type="AudioStream" id=23]
[ext_resource path="res://Scenes/Main/vyibor-nujnoy-klavishi-v-igre-pro-kosmos.mp3" type="AudioStream" id=24]
[ext_resource path="res://Scenes/Main/04_b.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Main/02_b.png" type="Texture" id=26]
[ext_resource path="res://Scenes/Main/03.png" type="Texture" id=27]
[ext_resource path="res://Scenes/Main/02.png" type="Texture" id=28]
[ext_resource path="res://Scenes/Main/04.png" type="Texture" id=29]
[ext_resource path="res://Scenes/Main/16_b.png" type="Texture" id=30]
[ext_resource path="res://Scenes/Main/17_b.png" type="Texture" id=31]
[ext_resource path="res://Scenes/Main/15_b.png" type="Texture" id=32]
[ext_resource path="res://Scenes/Main/18.png" type="Texture" id=33]
[ext_resource path="res://Scenes/Main/14_b.png" type="Texture" id=34]
[ext_resource path="res://Scenes/Main/18_b.png" type="Texture" id=35]
[ext_resource path="res://Scenes/Main/17.png" type="Texture" id=36]
[ext_resource path="res://Scenes/Main/16.png" type="Texture" id=37]
[ext_resource path="res://Scenes/Main/14.png" type="Texture" id=38]
[ext_resource path="res://Scenes/Main/15.png" type="Texture" id=39]

[sub_resource type="Animation" id=8]
resource_name = "Cetrion"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d8:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Ferra"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d10:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Frost"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d7:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jade"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Kitana"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d4:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Milina"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("d1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("d2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("d3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("d4:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("d5:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("d6:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("d7:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("d8:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("d9:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("d10:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Select:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Sindel"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d5:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Skarlet"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d9:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Sonya"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Tanya"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("d6:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 21 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 304, 540 )

[node name="d1" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 41.0
margin_right = 146.0
margin_bottom = 204.0
texture_normal = ExtResource( 20 )

[node name="d2" type="TextureButton" parent="."]
margin_left = 167.0
margin_top = 41.0
margin_right = 295.0
margin_bottom = 204.0
texture_normal = ExtResource( 28 )
texture_disabled = ExtResource( 26 )

[node name="d3" type="TextureButton" parent="."]
margin_left = 313.0
margin_top = 41.0
margin_right = 441.0
margin_bottom = 204.0
texture_normal = ExtResource( 27 )
texture_disabled = ExtResource( 22 )

[node name="d4" type="TextureButton" parent="."]
margin_left = 461.0
margin_top = 41.0
margin_right = 589.0
margin_bottom = 204.0
texture_normal = ExtResource( 29 )
texture_disabled = ExtResource( 25 )

[node name="d5" type="TextureButton" parent="."]
margin_left = 88.0
margin_top = 208.0
margin_right = 216.0
margin_bottom = 371.0
texture_normal = ExtResource( 19 )
texture_disabled = ExtResource( 15 )

[node name="d6" type="TextureButton" parent="."]
margin_left = 240.0
margin_top = 208.0
margin_right = 368.0
margin_bottom = 371.0
texture_normal = ExtResource( 12 )
texture_disabled = ExtResource( 3 )

[node name="d7" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 208.0
margin_right = 520.0
margin_bottom = 371.0
texture_normal = ExtResource( 10 )
texture_disabled = ExtResource( 5 )

[node name="d8" type="TextureButton" parent="."]
margin_left = 167.0
margin_top = 376.0
margin_right = 295.0
margin_bottom = 539.0
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 14 )

[node name="d9" type="TextureButton" parent="."]
margin_left = 313.0
margin_top = 376.0
margin_right = 441.0
margin_bottom = 539.0
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 18 )

[node name="d10" type="TextureButton" parent="."]
margin_left = 167.0
margin_top = 542.0
margin_right = 295.0
margin_bottom = 705.0
texture_normal = ExtResource( 11 )
texture_disabled = ExtResource( 16 )

[node name="d11" type="TextureButton" parent="."]
margin_left = 313.0
margin_top = 542.0
margin_right = 441.0
margin_bottom = 705.0
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 17 )

[node name="d12" type="TextureButton" parent="."]
margin_left = 88.0
margin_top = 709.0
margin_right = 216.0
margin_bottom = 872.0
texture_normal = ExtResource( 8 )
texture_disabled = ExtResource( 13 )

[node name="d13" type="TextureButton" parent="."]
margin_left = 240.0
margin_top = 709.0
margin_right = 368.0
margin_bottom = 872.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )

[node name="d14" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 709.0
margin_right = 520.0
margin_bottom = 872.0
texture_normal = ExtResource( 38 )
texture_disabled = ExtResource( 34 )

[node name="d15" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 876.0
margin_right = 146.0
margin_bottom = 1039.0
texture_normal = ExtResource( 39 )
texture_disabled = ExtResource( 32 )

[node name="d16" type="TextureButton" parent="."]
margin_left = 167.0
margin_top = 876.0
margin_right = 295.0
margin_bottom = 1039.0
texture_normal = ExtResource( 37 )
texture_disabled = ExtResource( 30 )

[node name="d17" type="TextureButton" parent="."]
margin_left = 313.0
margin_top = 876.0
margin_right = 441.0
margin_bottom = 1039.0
texture_normal = ExtResource( 36 )
texture_disabled = ExtResource( 31 )

[node name="d18" type="TextureButton" parent="."]
margin_left = 461.0
margin_top = 876.0
margin_right = 589.0
margin_bottom = 1039.0
texture_normal = ExtResource( 33 )
texture_disabled = ExtResource( 35 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cetrion = SubResource( 8 )
anims/Ferra = SubResource( 9 )
anims/Frost = SubResource( 10 )
anims/Jade = SubResource( 3 )
anims/Kitana = SubResource( 4 )
anims/Milina = SubResource( 5 )
anims/RESET = SubResource( 1 )
anims/Sindel = SubResource( 6 )
anims/Skarlet = SubResource( 11 )
anims/Sonya = SubResource( 2 )
anims/Tanya = SubResource( 7 )

[node name="Back" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 360, 639 )
stream = ExtResource( 23 )
autoplay = true

[node name="Select" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 360, 639 )
stream = ExtResource( 24 )

[connection signal="pressed" from="d1" to="." method="_on_d1_pressed"]
[connection signal="pressed" from="d2" to="." method="_on_d2_pressed"]
[connection signal="pressed" from="d3" to="." method="_on_d3_pressed"]
[connection signal="pressed" from="d4" to="." method="_on_d4_pressed"]
[connection signal="pressed" from="d5" to="." method="_on_d5_pressed"]
[connection signal="pressed" from="d6" to="." method="_on_d6_pressed"]
[connection signal="pressed" from="d7" to="." method="_on_d7_pressed"]
[connection signal="pressed" from="d8" to="." method="_on_d8_pressed"]
[connection signal="pressed" from="d9" to="." method="_on_d9_pressed"]
[connection signal="pressed" from="d10" to="." method="_on_d10_pressed"]
[connection signal="pressed" from="d11" to="." method="_on_d10_pressed"]
[connection signal="pressed" from="d12" to="." method="_on_d10_pressed"]
[connection signal="pressed" from="d13" to="." method="_on_d10_pressed"]
[connection signal="pressed" from="d14" to="." method="_on_d10_pressed"]
[connection signal="pressed" from="d15" to="." method="_on_d10_pressed"]
[connection signal="pressed" from="d16" to="." method="_on_d10_pressed"]
[connection signal="pressed" from="d17" to="." method="_on_d10_pressed"]
[connection signal="pressed" from="d18" to="." method="_on_d10_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
